- FIX: Fixed issues with license accepting after refactor. - ADD: Added more tests.